@@ -10,6 +10,7 @@ LibU x.y.z
 			failures on some platforms)
 	- [json] fix a memory leak in the indexing interface
 	- [hmap] fix bad free() in hmap_clear() when user owns data
+	- [queue] avoid complaints about redefined macros
 
 LibU 2.2.0
 	- [uri] fix excessively greedy match in IP-literal parser when there is no
